--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "lint": "eslint '**/*.js?(x)'",
+    "lint": "eslint '**/*.js'",
     "build": "node build.js"
   },
   "dependencies": {
