--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "test": "jest --coverage",
     "lint": "eslint '**/*.js'",
-    "build": "node build.js"
+    "build": "node build.js",
+    "knip": "knip"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "lodash": "4.17.20",
-    "moment": "2.29.1",
     "sql.js": "^1.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "@types/node": "^25.3.0",
     "esbuild": "^0.27.3",
     "eslint": "^10.0.1",
-    "globals": "^17.3.0"
+    "globals": "^17.3.0",
+    "jest": "^29.0.0",
+    "knip": "^5.85.0",
+    "supertest": "^6.3.0",
+    "typescript": "^5.9.3"
   }
 }
