--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --coverage",
+    "cov": "jest --coverage",
     "lint": "eslint '**/*.js'",
     "build": "node build.js",
     "knip": "knip"
@@ -22,7 +22,6 @@
     "globals": "^17.3.0",
     "jest": "^29.0.0",
     "knip": "^5.85.0",
-    "supertest": "^6.3.0",
-    "typescript": "^5.9.3"
+    "supertest": "^6.3.0"
   }
 }
