--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-24
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
