--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,7 @@ on:
     branches: [ main, intergration, development ]
 jobs:
   test:
-    runs-on: ubuntu-24
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         script: [test, cov]
