--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "lint": "eslint '**/*.js'",
     "build": "node build.js",
-    "knip": "knip",
+    "knip": "knip"
   },
   "dependencies": {
     "express": "^4.17.1",
