--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,11 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        script: [npm test, npx jest --coverage]
+        run: 
+          - args: ""
+            name: "Unit Tests"
+          - args: "-- --coverage"
+            name: "Coverage"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -20,5 +24,5 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Run ${{ matrix.script }}
-        run: ${{ matrix.script }}
+      - name: Run ${{ matrix.args }}
+        run: npm test ${{ matrix.args }}
