--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,7 +12,7 @@ jobs:
         run: 
           - args: ""
             name: "Unit Tests"
-          - args: "-- --coverage"
+          - args: "--coverage"
             name: "Coverage"
     steps:
       - name: Checkout repository
@@ -24,5 +24,5 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
-      - name: Run ${{ matrix.args }}
-        run: npm test ${{ matrix.args }}
+      - name: Run ${{ matrix.name }}
+        run: npm test -- ${{ matrix.args }}
