--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,4 +25,4 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run ${{ matrix.name }}
-        run: npm test -- ${{ matrix.args }}
+        run: npx jest ${{ matrix.args }}
