--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,25 +4,26 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main, intergration, development ]
+
 jobs:
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        run: 
-          - args: ""
-            name: "Unit Tests"
-          - args: "--coverage"
-            name: "Coverage"
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 25
           cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Run ${{ matrix.name }}
-        run: npx jest ${{ matrix.args }}
+      - run: npm ci
+      - run: npm test
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 25
+          cache: 'npm'
+      - run: npm ci
+      - run: npm test -- --coverage
