refactor: update metadata

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,8 @@ jobs:
             type=ref,event=branch
             type=ref,event=tag
             type=sha
-            type=raw,value=latest,enable={{ github.ref == 'refs/heads/main' }}
+            type=raw,value=latest
+        if: github.ref == 'refs/heads/main'
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
