--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,8 +15,7 @@ jobs:
     steps:
       - name: Deploy to staging
         run: |
-          echo "Deploying to staging via render.com"
-          curl -X POST "${{ secrets.STAGING_DEPLOY_HOOK }}"
+          echo "Deploying to staging"
 
   deploy:
     if: github.ref == 'refs/heads/main'
@@ -25,4 +24,4 @@ jobs:
       name: production
     steps:
       - name: Deploy to production
-        run: curl -X POST "${{ secrets.RENDER_DEPLOY_HOOK }}"
+        run: echo "Deploying to production"
