--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,8 +14,7 @@ jobs:
       name: staging
     steps:
       - name: Deploy to staging
-        run: |
-          echo "Deploying to staging"
+        run: echo "Deploying to staging"
 
   deploy:
     if: github.ref == 'refs/heads/main'
