--- a/.github/workflows/codeql-security-scan.yaml
+++ b/.github/workflows/codeql-security-scan.yaml
@@ -5,7 +5,11 @@ on:
   pull_request:
     branches: [ "main", "intergration", "development" ]
   schedule:
-    - cron: '0 0 * * 0'  
+    - cron: '0 0 * * 0'
+permissions:
+  actions: read
+  contents: read
+  security-events: write
 jobs:
   codeql:
     name: Analyze
