--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,6 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main, intergration, development ]
-
 jobs:
   unit-tests:
     runs-on: ubuntu-latest
@@ -16,7 +15,6 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm test
-
   coverage:
     runs-on: ubuntu-latest
     steps:
@@ -26,4 +24,10 @@ jobs:
           node-version: 25
           cache: 'npm'
       - run: npm ci
-      - run: npm test -- --coverage
+      - run: npm test -- --coverage --coverageReporters=lcov
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
