--- a/.github/workflows/performance.yaml
+++ b/.github/workflows/performance.yaml
@@ -2,9 +2,9 @@ name: Performance Tests
 
 on:
   push:
-    branches: [main, intergration, development, release/**]
+    branches: [main, integration, development, release/**]
   pull_request:
-    branches: [main, intergration, development]
+    branches: [main, integration, development]
   workflow_dispatch:
     inputs:
       base_url:
@@ -20,10 +20,23 @@ concurrency:
 
 jobs:
   smoke-test:
-    name: 🔥 Smoke Test
+    name: Smoke Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install k6
+        run: |
+          sudo gpg -k
+          sudo gpg --no-default-keyring \
+            --keyring /usr/share/keyrings/k6-archive-keyring.gpg \
+            --keyserver hkp://keyserver.ubuntu.com:80 \
+            --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" \
+            | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update -qq
+          sudo apt-get install -y k6
+
       - uses: ./.github/actions/start-app
         id: app
         with:
@@ -32,13 +45,15 @@ jobs:
       - name: Run smoke test
         run: |
           mkdir -p k6-results
-          k6 run --vus 1 --duration 30s \
+          k6 run \
+            --vus 1 --duration 30s \
             --summary-export=k6-results/smoke-summary.json \
             -e K6_BASE_URL=${{ steps.app.outputs.base-url }} \
-            scripts/performance-test.js
+            tests/performance/performance-test.js
 
-      - run: kill "$APP_PID" 2>/dev/null || true
+      - name: Stop app
         if: always()
+        run: kill "$APP_PID" 2>/dev/null || true
 
       - uses: actions/upload-artifact@v4
         if: always()
@@ -48,12 +63,25 @@ jobs:
           retention-days: 30
 
   load-test:
-    name: 📈 Load Test
+    name: Load Test
     runs-on: ubuntu-latest
     needs: smoke-test
     if: github.event_name != 'pull_request' || !github.event.pull_request.draft
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install k6
+        run: |
+          sudo gpg -k
+          sudo gpg --no-default-keyring \
+            --keyring /usr/share/keyrings/k6-archive-keyring.gpg \
+            --keyserver hkp://keyserver.ubuntu.com:80 \
+            --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" \
+            | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update -qq
+          sudo apt-get install -y k6
+
       - uses: ./.github/actions/start-app
         id: app
         with:
@@ -65,10 +93,11 @@ jobs:
           k6 run \
             --summary-export=k6-results/load-summary.json \
             -e K6_BASE_URL=${{ steps.app.outputs.base-url }} \
-            scripts/performance-test.js
+            tests/performance/performance-test.js
 
-      - run: kill "$APP_PID" 2>/dev/null || true
+      - name: Stop app
         if: always()
+        run: kill "$APP_PID" 2>/dev/null || true
 
       - name: Write step summary
         if: always()
@@ -76,6 +105,7 @@ jobs:
           {
             echo "## Load Test Results"
             echo "**Target:** ${{ steps.app.outputs.base-url }}"
+            echo ""
             echo "| Metric | Threshold |"
             echo "|--------|-----------|"
             echo "| http_req_duration | p(95)<600ms, p(99)<1200ms |"
@@ -95,12 +125,25 @@ jobs:
           retention-days: 30
 
   stress-test:
-    name: 💥 Stress Test
+    name: Stress Test
     runs-on: ubuntu-latest
     needs: load-test
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v4
+
+      - name: Install k6
+        run: |
+          sudo gpg -k
+          sudo gpg --no-default-keyring \
+            --keyring /usr/share/keyrings/k6-archive-keyring.gpg \
+            --keyserver hkp://keyserver.ubuntu.com:80 \
+            --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+          echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" \
+            | sudo tee /etc/apt/sources.list.d/k6.list
+          sudo apt-get update -qq
+          sudo apt-get install -y k6
+
       - uses: ./.github/actions/start-app
         id: app
         with:
@@ -111,13 +154,18 @@ jobs:
         run: |
           mkdir -p k6-results
           k6 run \
-            --stage 1m:50 --stage 2m:100 --stage 2m:200 --stage 2m:300 --stage 1m:0 \
+            --stage 1m:50 \
+            --stage 2m:100 \
+            --stage 2m:200 \
+            --stage 2m:300 \
+            --stage 1m:0 \
             --summary-export=k6-results/stress-summary.json \
             -e K6_BASE_URL=${{ steps.app.outputs.base-url }} \
-            scripts/performance-test.js
+            tests/performance/performance-test.js
 
-      - run: kill "$APP_PID" 2>/dev/null || true
+      - name: Stop app
         if: always()
+        run: kill "$APP_PID" 2>/dev/null || true
 
       - uses: actions/upload-artifact@v4
         if: always()
