--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -31,3 +31,35 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/lcov.info
           fail_ci_if_error: true
+    k6-performance:
+      name: k6 Performance Test
+      runs-on: ubuntu-latest
+      needs: [your-existing-test-job]  # whatever your test job is called
+      steps:
+        - uses: actions/checkout@v4
+
+        - name: Install k6
+          run: |
+            sudo gpg -k
+            sudo gpg --no-default-keyring \
+              --keyring /usr/share/keyrings/k6-archive-keyring.gpg \
+              --keyserver hkp://keyserver.ubuntu.com:80 \
+              --recv-keys C5AD17C747E3415A3642D57D77C6C491D6AC1D69
+            echo "deb [signed-by=/usr/share/keyrings/k6-archive-keyring.gpg] https://dl.k6.io/deb stable main" \
+              | sudo tee /etc/apt/sources.list.d/k6.list
+            sudo apt-get update -qq
+            sudo apt-get install -y k6
+
+        - uses: ./.github/actions/start-app
+          id: app
+
+        - name: Run k6 smoke test
+          run: |
+            k6 run \
+              --vus 1 --duration 30s \
+              -e K6_BASE_URL=${{ steps.app.outputs.base-url }} \
+              tests/performance/performance-test.js
+
+        - name: Stop app
+          if: always()
+          run: kill "$APP_PID" 2>/dev/null || true
