--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,7 +34,7 @@ jobs:
     k6-performance:
       name: k6 Performance Test
       runs-on: ubuntu-latest
-      needs: [your-existing-test-job]  # whatever your test job is called
+      needs: [your-existing-test-job]
       steps:
         - uses: actions/checkout@v4
 
