--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,7 +42,11 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - name: Start server
-        run: node app.js
+        run: node app.js &         
+        env:
+          PORT: 3000
+          NODE_ENV: production
+          DB_PATH: ./todo.db
       - uses: jtalk/url-health-check-action@v4
         with:
           url: http://localhost:3000/health
