--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,7 +48,7 @@ jobs:
           DB_PATH: ./todo.db
       - uses: jtalk/url-health-check-action@v4
         with:
-          url: http://localhost:3000/health
+          url: http://localhost:3000
           max-attempts: 5
           retry-delay: 2s
       - name: Run k6 performance test
