--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -16,3 +16,29 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
+
+  cascade-merge:
+    runs-on: ubuntu-latest
+    needs: release-please
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.CASCADE_PAT }}
+
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Merge main into integration
+        run: |
+          git checkout integration
+          git merge origin/main --no-ff -m "chore: cascade merge main into integration"
+          git push origin integration
+
+      - name: Merge integration into development
+        run: |
+          git checkout development
+          git merge origin/integration --no-ff -m "chore: cascade merge integration into development"
+          git push origin development
