--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,6 +106,11 @@ jobs:
 
       - run: npm ci
 
+      - name: Merge coverage reports
+        run: |
+          npx istanbul-merge --out coverage/coverage-final.json 'coverage/**/coverage-final.json'
+          npx lcov-result-merger 'coverage/**/lcov.info' coverage/lcov.info
+
       - name: Enforce Jest coverage thresholds
         run: npm run coverage:verify
 
