--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -108,9 +108,12 @@ jobs:
 
       - name: Merge coverage reports
         run: |
-          npx istanbul-merge --out coverage/coverage-final.json 'coverage/**/coverage-final.json'
-          npx lcov-result-merger 'coverage/**/lcov.info' coverage/lcov.info
-
+          npx nyc merge coverage coverage/coverage-final.json
+          npx nyc report \
+            --reporter=lcov \
+            --report-dir=coverage \
+            --temp-dir=coverage
+      
       - name: Enforce Jest coverage thresholds
         run: npm run coverage:verify
 
