--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,7 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
+    needs: install
     steps:
       - uses: actions/checkout@v4
       
@@ -62,6 +63,7 @@ jobs:
 
   generate-shards:
     runs-on: ubuntu-latest
+    needs: install
     outputs:
       shards: ${{ steps.set.outputs.shards }}
       count: ${{ steps.set.outputs.count }}
@@ -86,6 +88,7 @@ jobs:
   
   test:
     runs-on: ubuntu-latest
+    needs: install
     needs: generate-shards
     strategy:
       fail-fast: false
@@ -146,6 +149,7 @@ jobs:
 
   k6:
     name: k6 Performance Test
+    needs: install
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
