--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint '**/*.js'",
     "build": "node build.js",
     "coverage:verify": "node scripts/verify",
-    "coverage:merge": "node scripts/merge"
+    "coverage:merge": "node scripts/merge",
     "knip": "knip"
   },
   "dependencies": {
