--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -85,6 +85,13 @@ jobs:
             --coverageThreshold='{}' \
             --shard=${{ matrix.shard }}/${{ needs.generate-shards.outputs.count }}
 
+      - name: Upload coverage artifact (shard ${{ matrix.shard }})
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-shard-${{ matrix.shard }}
+          path: coverage
+
+
   coverage-upload:
     name: Upload Coverage
     needs: test
