--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -1,6 +1,7 @@
 name: Release Please
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - main
 
@@ -10,15 +11,17 @@ permissions:
 
 jobs:
   release-please:
+    if: github.event.pull_request.merged == true &&
+        github.event.pull_request.user.login == 'github-actions[bot]'
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
-          skip-github-release: true
 
   cascade-merge:
+    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.title, "chore(main): release")
     runs-on: ubuntu-latest
     needs: release-please
     steps:
@@ -32,7 +35,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Merge main into integration
+      - name: Merge main into intergration
         run: |
           git checkout intergration
           git merge origin/main --no-ff -m "chore: cascade merge main into intergration"
@@ -41,5 +44,5 @@ jobs:
       - name: Merge integration into development
         run: |
           git checkout development
-          git merge origin/integration --no-ff -m "chore: cascade merge integration into development"
+          git merge origin/intergration --no-ff -m "chore: cascade merge integration into development"
           git push origin development
