--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -1,18 +1,14 @@
 name: Release Please
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - main
-
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
   release-please:
-    if: github.event.pull_request.merged == true &&
-        github.event.pull_request.user.login == 'github-actions[bot]'
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
@@ -20,8 +16,8 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           release-type: node
 
-  cascade-merge:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.title, "chore(main): release")
+    cascade-merge:
+    if: startsWith(github.event.head_commit.message, 'chore(main):\ release')
     runs-on: ubuntu-latest
     needs: release-please
     steps:
