--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+
 permissions:
   contents: write
   pull-requests: write
@@ -13,7 +14,7 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CASCADE_PAT }}
           release-type: node
 
   cascade-merge:
