--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.CASCADE_PAT }}
           release-type: node
 
   cascade-merge:
