--- a/.github/workflows/realease.yaml
+++ b/.github/workflows/realease.yaml
@@ -4,13 +4,19 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
         with:
-          token: ${{ secrets.CASCADE_PAT }}
+          token: ${{ secrets.GITHUB-TOKEN }}
           release-type: node
 
   cascade-merge:
