--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,6 +62,7 @@ jobs:
           echo "shards=$(node -e "console.log(JSON.stringify({shard:[...Array($SHARD_COUNT)].map((_,i)=>i+1)}))")" >> $GITHUB_OUTPUT
   
   test:
+    name: test
     runs-on: ubuntu-latest
     needs: generate-shards
     strategy:
@@ -90,8 +91,7 @@ jobs:
           name: coverage-shard-${{ matrix.shard }}
           path: coverage
 
-
-  coverage-upload:
+  tests-complete:
     name: Codecov Quality Gate
     needs: test
     runs-on: ubuntu-latest
