--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -196,7 +196,7 @@ jobs:
 
   build-and-push:
     name: Build and Push Docker Image
-    needs: [lint, coverage-upload, k6]
+    needs: [lint, tests-complete, k6]
     runs-on: ubuntu-latest
     permissions:
       contents: read
