--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,57 @@ permissions:
   security-events: write
 
 jobs:
+  release-please:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - uses: googleapis/release-please-action@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          release-type: node
+  
+  cascade-merge:
+    runs-on: ubuntu-latest
+    needs: release-please
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+          token: ${{ secrets.CASCADE_PAT }}
+
+      - name: Check previous commit message
+        id: check-commit
+        run: |
+          PREV_MSG=$(git log --format=%s -n 1 HEAD~1)
+          echo "Previous commit: $PREV_MSG"
+          if echo "$PREV_MSG" | grep -q '^chore(main): release'; then
+            echo "match=true" >> $GITHUB_OUTPUT
+          else
+            echo "match=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Configure Git
+        if: steps.check-commit.outputs.match == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+      - name: Merge main into intergration
+        if: steps.check-commit.outputs.match == 'true'
+        run: |
+          git checkout intergration
+          git merge origin/main --no-ff -m "chore: cascade merge main into intergration"
+          git push origin intergration
+
+      - name: Merge integration into development
+        if: steps.check-commit.outputs.match == 'true'
+        run: |
+          git checkout development
+          git merge origin/intergration --no-ff -m "chore: cascade merge integration into development"
+          git push origin development
+
+
   lint:
     runs-on: ubuntu-latest
     steps:
