chore: fix release file give consents permissions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ env:
 
 permissions:
   actions: read
-  contents: read
+  contents: write
   packages: write
   pull-requests: write
   security-events: write
